  bracket balance in order to not break variable tags apart if they
  are configured to look like this: ``${expr}``. This also fixes
  the problem with nested dicts in variable expressions.

- added whitespace management system for the template designer.

- some small bugfixes.

- improved security system regarding function calls and variable
  assignment in for loops.

- added `lipsum` function to generate random text.

- strings without unicode characters are processed as binary strings now
  to workaround problems with `datetime.strftime` which only accepts
  binary strings.

- it's now possible to use newlines in string literals

- developer friendly traceback is now toggleable

- silent variable name failure is now toggleable

- fixed issue with old-style classes not implementing `__getitem__`
  (thanks to Axel Böhm for discovering that bug)

- added a bunch of new docstrings to the Jinja classes. Makes fun now to
  use pydoc :-)

- fixed severe memcaching bug. Formerly it wasn't possible to use memcaching
  without enabling disk cache.

- fixed a bug that allowed users to override the special names `_`, `true` etc.

- added `batch` and `slice` filters for batching or slicing sequences

- added `sum`, `abs` and `round` filters. This fixes #238

- added `striptags` and `xmlattr` filters for easier SGML/XML processing

- the trans tag does not need explicit naming for variables with the same
  name any more. You can now use ``{% trans foo %}`` instead of the verbose
  version ``{% trans foo=foo %}``.

- reimplemented Buffet plugin so that it works at least for pylons

- added `Environment.get_translations_for_string`

- fixed a bug in the parser that didn't unescape keyword arguments. (thanks
  to Alexey Melchakov for reporting)

- You can now use the environment to just tokenize a template. This can
  be useful for syntax highlighting or other purposes.


Version 1.0
-----------
(released Mar 23, 2007)

- Initial release