@@ -936,5 +936,66 @@ default:
         {% trans username %}Hello {{ username }}!{% endtrans %}
 
 
+Bleeding Edge
+=============
+
+Here are some features documented that are new in the SVN version and might
+change.
+
+``{% call %}``:
+
+    A new tag that allows to pass a macro a block with template data:
+
+    .. sourcecode:: html+jinja
+
+        {% macro dialog title %}
+          <div class="dialog">
+            <h3>{{ title }}</h3>
+            <div class="text">
+              {{ caller() }}
+            </div>
+          </div>
+        {% endmacro %}
+
+    Called the normal way `caller` will be undefined and thus return nothing
+    in silent mode or raise an exception in non silent. But if you call it
+    with the new `{% call %}` tag you can pass it some data:
+
+    .. sourcecode:: html+jinja
+
+        {% call dialog('Hello World') %}
+            This is an example dialog
+        {% endcall %}
+
+    If you pass `caller()` some keyword arguments those are added to the
+    namespace of the wrapped template data:
+
+    .. sourcecode:: html+jinja
+
+        {% macro makelist items %}
+          <ul>
+          {%- for item in items %}
+            <li>{{ caller(item=item) }}</li>
+          {%- endfor %}
+          </ul>
+        {%- endmacro %}
+
+        {% call makelist([1, 2, 3, 4, 5, 6]) -%}
+          [[{{ item }}]]
+        {% endcall %}
+
+    This will then produce this output:
+
+    .. sourcecode:: html
+
+        <ul>
+          <li>[[1]]</li>
+          <li>[[2]]</li>
+          <li>[[3]]</li>
+          <li>[[4]]</li>
+          <li>[[5]]</li>
+          <li>[[6]]</li>
+        </ul>
+
 .. _slicing chapter: http://diveintopython.org/native_data_types/lists.html#odbchelper.list.slice
 .. _range function: http://docs.python.org/tut/node6.html#SECTION006300000000000000000
